diun/allow_kubeapi_ingress_egress_diun.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-kubeapi-ingress-egress-diun"
spec:
  endpointSelector:
    matchLabels:
      name: diun
  # ingress:
  #   - fromEntities:
  #     - kube-apiserver
  egress:
    - toEntities:
      - kube-apiserver
